# Auto-Deploy

./: .mergify.yml  README.md  config.py  config_repositories.json  pyproject.toml  requirements.txt  update_repos.sh  webhooks.py
tests/: conftest.py  test_routes.py  test_utils.py
tests/events/: push_event.json
webhooks/: __init__.py  routes.py  utils.py
webhooks/hooks/: __init__.py  push_master.py
