[tool.poetry]
name = "handle-github-webhooks"
version = "0.1.0"
description = "Simple project for handle github's webhooks on a server"
authors = ["Guillaume <7831777+GuillaumeOj@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flake8 = "^3.8.4"
black = "^20.8b1"
gunicorn = "^20.0.4"
isort = "^5.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
