[tool.poetry]
name = "handle-github-webhooks"
version = "0.1.0"
description = "Simple project for handle github's webhooks on a server"
authors = ["Guillaume <7831777+GuillaumeOj@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flake8 = "^3.8.4"
black = "^20.8b1"
gunicorn = "^20.0.4"
isort = "^5.5.4"
pytest = "^6.1.0"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 90

[tool.isort]
force_single_line = true
lines_after_imports = 2
force_sort_within_sections = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

